k8s/scaleapi/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scaleapi
  name: scaleapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scaleapi
  template:
    metadata:
      labels:
        app: scaleapi
    spec:
      containers:
        - image: 020493826288.dkr.ecr.ap-south-1.amazonaws.com/scaleapi:latest
          name: scaleapi
          ports:
            - containerPort: 8080
