k8s/scaleapi/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scaleapi
  name: scaleapi
spec:
  ports:
    - name: "8080"
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: scaleapi
  type: ClusterIP
